--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "JATE",
+  "name": "jate",
   "version": "1.0.0",
-  "description": "",
+  "description": "An online and offline text editor.",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
-    "start": "node server.js",
-    "server": "",
-    "build": "",
-    "install": "",
-    "client": ""
+    "dev": "webpack-dev-server",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "client": "cd client && npm start"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Matthew Standish",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "idb": "^7.1.1",
